--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Poppins:wght@100;200;400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=JetBrains+Mono&family=Poppins:wght@100;200;400;600;800&display=swap');
 
 *{
   margin: 0;
